# PYCOF

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  publish_to_pypi.py  pygef.py  pyproject.toml  setup.py  setup_new.py  setup_template.py
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst
docs/modules/: error.rst  pycof.rst
docs/modules/datamngt/: datamngt.rst
docs/modules/format/: format.rst
docs/modules/model/: model.rst
docs/modules/news/: faq.rst  updates.rst
docs/modules/sql/: sql.rst
pycof/: __init__.py  about.py  data.py  format.py  init_template.py  misc.py  oldpycof.py  pycof.py  sql.py  sqlhelper.py  test.py
tests/: test_basic.py
